Styles/index.css
/*flex shrink and flex basis are confusing
buttons dont go away once i press them*/

html {
  font-size: 62.5%;
  scroll-padding-top: 7vh;
  --smallnavheight: 30vh;
  --largenavheight: 7vh;
  --asidebackground: white;
  --asidecolor: black;
  --leftPos: 50%;
  --topPos: 50%;
}

body {
  color: black;
  font-size: 2rem;
  margin: 0;
  width: 100vw;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  display: flex;
  flex-direction: column;
}

/*HEADER CONTROL*/
h1,
h2,
h3,
h4 {
  margin: 0;
}

/*STICKY NAVIGATION BAR*/
.navigationbar {
  background-color: rgb(14, 14, 14);
  width: 100vw;
  min-height: var(--largenavheight);
  position: fixed;
  display: flex;
  justify-content: space-between;
  top: 0;
  left: 0;
  z-index: 1;
}

.navigationbar__nav {
  font-weight: 800;
  display: flex;
  flex-direction: row;
  margin-right: 3rem;
  align-items: center;
  justify-content: center;
  max-width: 100%;
}

.navigationbar__nav a {
  transition: border-color 0.15s, box-shadow 0.15s;
  color: rgb(215, 215, 215);
  text-decoration: none;
  margin: 0px 0.5rem;
  padding: 10px 10px;
  position: relative;
  cursor: pointer;
}

/*HERO*/
.herowrapper {
  padding-top: var(--largenavheight);
  text-align: center;
  font-size: 3rem;
  display: flex;
  flex-direction: column;
}

.hero {
  background-image: url("../Images/pexels-pixabay-270348.jpg");
  background-size: cover;
  background-position: right;
  height: 40vh;
  width: 100vw;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  color: white;
}

.hero__img {
  max-width: auto;
  height: 100%;
}

.hero__div {
  padding-right: 5vw;
  padding-bottom: 23vh;
}

.hero__div h1 {
  font-weight: 800;
}

/*MAIN*/
main {
  display: flex;
  flex-direction: row;
  background: var(--asidebackground);
  min-height: 110vh;
}

/*ASIDE QUOTES*/
aside {
  flex: 0.7 0.7 0;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  border-right: 0.5rem solid black;
}

.quote {
  flex-direction: column;
  display: flex;
  min-height: 13%;
  max-width: 80%;
  border: 1px solid var(--asidecolor);
  position: relative;
  color: var(--asidecolor);
  z-index: 0;
  justify-content: center;
  align-items: center;
}

.quote__span {
  background: var(--asidebackground);
  color: var(--asidecolor);
  padding: 0 0.5rem;
  font-size: 2rem;
  position: absolute;
  top: -15%;
  align-self: center;
}

.quote__p {
  justify-self: center;
  align-self: center;
  font-size: 1.8rem;
  padding: 2rem;
  margin-bottom: 0;
}

.corner {
  height: 30px;
  width: 30px;
  border-radius: 50%;
  border: 1px solid var(--asidecolor);
  transform: rotate(-45deg);
  position: absolute;
  background: var(--asidebackground);
}

#left_top {
  top: -16px;
  left: -16px;
  border-color: transparent transparent var(--asidecolor) transparent;
}
#right_top {
  top: -16px;
  right: -16px;
  border-color: transparent transparent transparent var(--asidecolor);
}
#left_bottom {
  bottom: -16px;
  left: -16px;
  border-color: transparent var(--asidecolor) transparent transparent;
}
#right_bottom {
  bottom: -16px;
  right: -16px;
  border-color: var(--asidecolor) transparent transparent transparent;
}

div.skills {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

div.skills h2 {
  text-align: center;
}

ul {
  margin: 1rem;
  list-style: none;
  text-align: center;
}

/*CONTENT*/
.main__div {
  flex: 2 2 0;
  display: flex;
  flex-direction: column;
}

#about_me {
  flex: 1.5 1.5 0;
  margin: 2rem;
  text-align: center;
  background-color: var(--asidebackground);
  display: flex;
  flex-direction: column;
}

.about_me__p {
  margin: 1rem 0rem;
  text-align: left;
}

#work {
  flex: 3 3 0;
  margin: 0rem 2rem;
  text-align: center;
  background-color: var(--asidebackground);
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  flex-wrap: wrap;
}

#work .gallery {
  margin: 1rem;
  width: 90%;
  display: grid;
  grid-template-columns: 50% 50%;
  grid-template-rows: repeat(4, 100px);
  justify-content: center;
  align-content: center;
  gap: 5rem;
  margin-bottom: 4rem;
}

.box span {
  visibility: hidden;
}

.box {
  color: white;
  border: 1px solid black;
  border-radius: 1rem;
  box-shadow: 0.4rem 0.4rem 0.5rem rgba(0, 0, 0, 0.9);
  background-size: cover;
  background-position: center;
  min-height: 10rem;
}

.box-one {
  background-image: url(../Images/PreworkStudyGuide.JPG);
  grid-column: 1/3;
  grid-row: 1/3;
}

.box-two {
  background-image: url(../Images/multiplicationapp.JPG);
}

.box-three {
  background-image: url(../Images/digitalclock.JPG);
}

.box-four {
  background-image: url(../Images/ripplebutton.JPG);
}

.box-five {
  background-image: url(../Images/charactercounter.JPG);
}

/*FOOTER*/
footer {
  background-color: black;
  min-height: 30vh;
  color: white;
  padding: 4rem;
  font-weight: 1000;
}

footer a {
  margin: 2rem;
}

/*Only objects that have hover as their primary select feature can access this block*/
@media (hover: hover) {
  /* Nav Border from Y to X  */
  nav.borderYtoX a:before,
  nav.borderYtoX a:after {
    position: absolute;
    opacity: 0.5;
    height: 100%;
    width: 2px;
    content: "";
    background: #fff;
    transition: all 0.3s;
  }

  nav.borderYtoX a:before {
    left: 0px;
    top: 0px;
  }

  nav.borderYtoX a:after {
    right: 0px;
    bottom: 0px;
  }

  nav.borderYtoX a:hover:before,
  nav.borderYtoX a:hover:after {
    opacity: 1;
    height: 2px;
    width: 100%;
  }
  /* Gallery button ripple effect */
  .btn1,
  .btn2,
  .btn3,
  .btn4,
  .btn5 {
    font-family: cursive;
    padding: auto;
    text-decoration: none;
    color: black;
    position: relative;
    overflow: hidden;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .box span {
    position: relative;
    z-index: 1;
    color: white;
    font-size: 3rem;
    opacity: 0;
    transition: opacity 0.5s;
    visibility: visible;
  }

  .box:hover span {
    opacity: 1;
  }

  .btn1::before,
  .btn2::before,
  .btn3::before,
  .btn4::before,
  .btn5::before {
    content: "";
    position: absolute;
    background-color: orangered;
    width: 0rem;
    height: 0rem;
    top: var(--topPos);
    left: var(--leftPos);
    transform: translate(-50%, -50%);
    border-radius: 50%;
    transition: width 0.25s, height 0.25s;
  }

  .btn1:hover::before {
    width: 500rem;
    height: 500rem;
  }

  .btn2:hover::before,
  .btn3:hover::before,
  .btn4:hover::before,
  .btn5:hover::before {
    width: 300rem;
    height: 300rem;
  }
}

@media screen and (max-width: 980px) {
  #work .gallery {
    width: 90%;
    grid-template-columns: 100%;
    grid-template-rows: repeat(6, 100px);
  }

  .box {
    margin: 0rem;
  }

  .box-one {
    grid-column: 1/2;
    grid-row: 1/3;
  }

  .quote__p {
    font-size: 1.6rem;
  }

  .quote__span {
    font-size: 1.8rem;
    top: -10%;
  }
  .quote {
    max-width: 81%;
  }
}

@media screen and (max-width: 768px) {
  html {
    scroll-padding-top: var(--smallnavheight);
  }

  .navigationbar {
    min-height: var(--smallnavheight);
    justify-content: center;
    align-items: center;
  }

  .navigationbar__nav {
    line-height: 1;
    margin-right: 0;
    font-size: 3rem;
    font-weight: 700;
    flex-direction: column;
    text-align: center;
  }

  nav.container a {
    margin: none;
    padding: 5px 5px;
    padding: none;
    font-size: 100;
  }

  .herowrapper {
    padding-top: var(--smallnavheight);
  }

  .hero {
    height: 100%;
  }

  .hero__div {
    display: none;
  }

  main {
    display: flex;
    flex-direction: column;
  }

  #about_me {
    margin-top: -1rem;
  }

  .main__div {
    flex: 2 2 0;
  }

  aside {
    min-height: 60rem;
    flex: 1 1 0;
    border-right: none;
  }

  .box-one {
    grid-row: 1/3;
  }

  .quote__span {
    top: -20%;
  }
}

